--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -49,12 +49,13 @@
 }
 
 #especialidades {
-    justify-self: center;
     align-items: center;
+    margin: 0 auto;
     width: 95%;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-bottom: 30px;
 }
 
 .especialidades-cards {
@@ -202,6 +203,7 @@
 
     .especialidades-cards {
         flex-direction: column;
+        align-items: center;
     }
 
     .planos-card {
@@ -234,7 +236,6 @@
     .especialidades-card {
         width: 90%;
         max-width: 400px;
-        align-items: center;
     }
 
     .cta-btn a {
